Fixed overflow of productions data

--- a/assets/CSS/prod.scss
+++ b/assets/CSS/prod.scss
@@ -48,6 +48,7 @@ h1 {
   flex-direction: column;
   background-color: rgba(255,255,255,0.9);
   transform: rotateY( 180deg );
+  overflow-y: auto;
 }
 
 .card.is-flipped{
